# falcon-limiter

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .gitignore  .travis.yml  AUTHORS  CHANGES  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  pytest.ini  tox.ini
.github/workflows/: test.yaml
docs/: async.rst  conf.py  config.rst  index.rst  license.rst  quickstart.rst  recipes.rst  requirements.txt
docs/_static/: custom.css
docs/_templates/: sidebarlinks.html
docs/api_reference/: index.rst
falcon_limiter/: __init__.py  async_limiter.py  async_middleware.py  limiter.py  middleware.py  utils.py
tests/: conftest.py  test_deduct_when.py  test_dynamic_limits.py  test_key_func.py  test_key_prefix.py  test_limiter.py  test_multiple_decorators.py  test_redis.py  test_utils.py
tests/async_tests/: test_deduct_when.py  test_dynamic_limits.py  test_key_func.py  test_key_prefix.py  test_limiter.py  test_multiple_decorators.py  test_redis.py  test_utils.py
